Closed Bug 761152 Opened 14 years ago Closed 2 years ago

Empty referer after history.pushState

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: dylfin, Assigned: maltejur)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:12.0) Gecko/20100101 Firefox/12.0 Build ID: 20120420145725 Steps to reproduce: 1. Go to https://github.com/balupton to create referer 1. Go to https://github.com/balupton/history.js 2. Enable HTTP requests log 3. Go to 'demo' folder in list. There history.pushState work. 4. Press F5 to refresh page Actual results: Page 'https://github.com/balupton/history.js/tree/master/demo' refreshed. Field 'Referer' wasn't set in sent request headers. Expected results: Field 'Referer' should contain page address 'https://github.com/balupton' which is referer for current page. This is work in Chrome.
I can reproduce on current nightly on OS X. See also bug 968861, but not marking as a duplicate, since this is focussed on pushState, while the at least part of the discussion in the other bug seems to be about hash changes.
Status: UNCONFIRMED → NEW
Component: Untriaged → Document Navigation
Depends on: 968861
Ever confirmed: true
OS: Windows 7 → All
Product: Firefox → Core
Hardware: x86_64 → All
Version: 12 Branch → Trunk
Yeah, this is the same code internally...
See Also: → 1324860
Severity: normal → S3
See Also: → 1773192

Per spec [1], we should copy over the complete document state [2], which
includes the referrer info. Bug 1773192 has already added this for the
"replace" case when the session history is in parent (almost always the case),
but it is still missing for the "push" case, and the "replace" case when the
session history is not in parent.

[1] https://html.spec.whatwg.org/multipage/browsing-the-web.html#url-and-history-update-steps
[2] https://html.spec.whatwg.org/multipage/browsing-the-web.html#document-state

Assignee: nobody → mjurgens
Status: NEW → ASSIGNED
Pushed by mjurgens@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d72a439b6669 Copy referrer info to new session history entry on history.pushState r=freddyb
Blocks: 1881533
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Blocks: 968861
No longer depends on: 968861
See Also: 13248601750706
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: