dom/security/test/referrer-policy/browser_session_history.js
@@ -4,7 +4,7 @@
 "use strict";
 
 const TEST_FILE =
-  "https://example.com/browser/dom/security/test/referrer-policy/file_fragment_navigation.sjs";
+  "https://example.com/browser/dom/security/test/referrer-policy/file_session_history.sjs";
 
 add_task(async function test_browser_navigation() {
   await BrowserTestUtils.withNewTab(TEST_FILE, async browser => {
@@ -36,6 +36,21 @@ add_task(async function test_browser_navigation() {
       ok(
         content.document.getElementById("ok"),
         "Page should load when checking referrer after fragment navigation and reload"
+      );
+
+      info("Clicking on push_state button");
+      content.document.getElementById("push_state").click();
+    });
+
+    info("Reloading tab");
+    loadPromise = BrowserTestUtils.browserLoaded(browser);
+    await BrowserTestUtils.reloadTab(gBrowser.selectedTab);
+    await loadPromise;
+
+    await SpecialPowers.spawn(browser, [], () => {
+      ok(
+        content.document.getElementById("ok"),
+        "Page should load when checking referrer after history.pushState and reload"
       );
     });
   });
